#37-feat(server): add user auth
